# ProjectChess

./: ClassDescription.md  Description.md  InterfaceClassDescription.md  ProjectDescription.md  README.md  build.sh  run.sh
description/: InterfaceClassDescription.md  LogicClassDescription.md
source/: CMakeLists.txt  Main.h  build.sh  configs.h  moves.txt  play.txt  test.cpp
source/actionlink/: Action.cpp  Action.h  CMakeLists.txt
source/interface/: CMakeLists.txt  Head.cpp  Interface.cpp
source/interface logic/: Head.cpp  Head.h  include interface logic.h
source/interface logic/Interface/: InterFace.cpp  InterFace.h  Window.cpp  Window.h
source/interface logic/Interface/windows types/: GameWindow.cpp  GameWindow.h  MenuWindow.h
source/interface logic/action/: Action.cpp  Action.h
source/interface logic/action/actions types/: CancelMove.cpp  CancelMove.h  MakeMove.cpp  MakeMove.h  OfferDraw.cpp  OfferDraw.h  Surrender.cpp  Surrender.h
source/interface logic/button/: Button.cpp  Button.h
source/interface logic/button/buttons types/: MenuButton.cpp  MenuButton.h  NewGameClassicModeButton.cpp  NewGameClassicModeButton.h  OfferDrawButton.cpp  OfferDrawButton.h  QuitButton.cpp  QuitButton.h  SurrenderButton.cpp  SurrenderButton.h
source/interface logic/interface/: Interface.cpp  Interface.h  Window.cpp  Window.h
source/interface logic/interface/windows types/: GameWindow.cpp  GameWindow.h  MenuWindow.cpp  MenuWindow.h
source/interface logic/wrappers/: PieceWrapper.cpp  PieceWrapper.h  PositionWrapper.cpp  PositionWrapper.h
source/interface/action/: Action.cpp  CancelMove.cpp  MakeMove.cpp  Surrender.cpp
source/interface/console/windows/: GameWindowConsole.cpp  MenuWindowConsole.cpp
source/interface/console_interface/: Interface.cpp
source/interface/console_interface/headers/: Interface.h
source/interface/console_interface/headers/windows/: GameWindow.h  MenuWindow.h  Window.h  windows.h
source/interface/console_interface/windows/: GameWindow.cpp  MenuWindow.cpp  Window.cpp
source/interface/headers/: Head.h  Interface.h  interface.h  logic_part.h
source/interface/headers/actions/: Action.h  CancelMove.h  MakeMove.h  Surrender.h  actions.h
source/interface/headers/console/windows/: GameWindowConsole.h  MenuWindowConsole.h  windows.h
source/interface/headers/windows/: GameWindow.h  MenuWindow.h  Window.h  windows.h
source/interface/headers/wrappers/: PieceWrapper.h  PositionWrapper.h  wrappers.h
source/interface/windows/: GameWindow.cpp  MenuWindow.cpp
source/interface/wrappers/: PieceWrapper.cpp  PositionWrapper.cpp
source/interface_logic/: CMakeLists.txt  Head.cpp  Head.h  include_interface_logic.h
source/interface_logic/action/: Action.cpp
source/interface_logic/action/actions_types/: MakeMove.cpp  MakeMove.h  OfferDraw.cpp  OfferDraw.h  Surrender.cpp
source/interface_logic/interface/: Interface.h  Window.h
source/interface_logic/interface/windows_types/: GameWindow.h  MenuWindow.h
source/interface_logic/wrappers/: PieceWrapper.cpp  PositionWrapper.cpp  PositionWrapper.h
source/logic/: CMakeLists.txt  Convert.cpp  Converter.cpp  Game.cpp  GameLogic.cpp  Logic.cpp  Position.cpp  test.cpp
source/logic/configs/: start_position.txt
source/logic/figures/: Bishop.cpp  Empty.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
source/logic/headers/: Enums.h  ErrorType.h  Game.h  GameLogic.h  InvalidMove.h  Logic.h  Move.h  Piece.h  Position.h  logic.h  moves.h  pieces.h
source/logic/headers/AtomicMoves/: AtomicCastle.h  AtomicEnPassant.h  AtomicPromotion.h  AtomicSimpleMove.h  atomic_moves.h
source/logic/headers/AtomicPieces/: AtomicBishop.h  AtomicKing.h  AtomicKnight.h  AtomicPawn.h  AtomicQueen.h  AtomicRook.h  atomic_pieces.h
source/logic/headers/ClassicalMoves/: Castle.h  EnPassant.h  Promotion.h  SimpleMove.h  classic_moves.h
source/logic/headers/ClassicalPieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  classical_pieces.h
source/logic/headers/CrazyMoves/: Explode.h
source/logic/headers/Moves/: Castle.h  EnPassant.h  InPassing.h  InvalidMove.h  Move.h  Promotion.h  SimpleMove.h
source/logic/headers/Pieces/: Bishop.h  Empty.h  King.h  Knight.cpp  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
source/logic/moves/: Castle.cpp  EnPassant.cpp  Explode.cpp  InvalidMove.cpp  Promotion.cpp  SimpleMove.cpp
source/logic/moves/AtomicMoves/: AtomicCastle.cpp  AtomicEnPassant.cpp  AtomicPromotion.cpp  AtomicSimpleMove.cpp
source/logic/moves/ClassicalMoves/: Castle.cpp  EnPassant.cpp  Promotion.cpp  SimpleMove.cpp
source/logic/pieces/: Bishop.cpp  Empty.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
source/logic/pieces/AtomicPieces/: AtomicBishop.cpp  AtomicKing.cpp  AtomicKnight.cpp  AtomicPawn.cpp  AtomicQueen.cpp  AtomicRook.cpp
source/logic/pieces/ClassicalPieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
source/main/: CMakeLists.txt  Main.cpp
source/main/headers/: Main.h
source/main/headers/scripts/: ExitScript.h  Game.h  GameScript.h  Menu.h  MenuScript.h  Script.h  scripts.h
source/main/scripts/: ExitScript.cpp  Game.cpp  GameScript.cpp  Menu.cpp  MenuScript.cpp
